# csv-data-analyst-copilot

./: .gitignore  README.md  render.yaml  test.csv
backend/: main.py  pyproject.toml  rag.py  requirements.txt
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  Chat.jsx  Upload.jsx  index.css
